feat: implement tilted system planning

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 planning_continous/data/
 planning_continous/images/
 planning_continous/data/
+planning_continous_tilted/data/
+planning_continous_tilted/images/
+planning_continous_tilted/data/
 planning_descite/images/
 planning_descitemages/
 control/images/
